--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://david2132.github.io/Portfolio",
+  "homepage" : "https://david2132.github.io/Portfolio/",
   "name": "Portfolio",
   "version": "0.1.0",
   "private": true,
